criando classes de validação do sistema

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -6,6 +6,10 @@
     "baseUrl": "",
     "types": []
   },
+  "compilerOptions": {
+        "target": "ES5",
+        "experimentalDecorators": true
+  },
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
