--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
+    "linqts": "^1.8.2",
     "materialize-css": "^0.98.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
