--- a/package.json
+++ b/package.json
@@ -49,5 +49,17 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.1.1.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LucasViniciusPereira/Bet-Help.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/LucasViniciusPereira/Bet-Help/issues"
+  },
+  "homepage": "https://github.com/LucasViniciusPereira/Bet-Help#readme"
 }
