--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "linqts": "^1.8.2",
+    "node-snackbar": "^0.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
