--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/underscore": "^1.8.1",
     "bootstrap-material-design": "^0.5.10",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -27,6 +28,7 @@
     "linqts": "^1.8.2",
     "node-snackbar": "^0.1.0",
     "rxjs": "^5.1.0",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
