--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,11 +4,13 @@
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "baseUrl": "",
-    "types": []
+    "types": [
+      "underscore"
+    ]
   },
   "compilerOptions": {
-        "target": "ES5",
-        "experimentalDecorators": true
+    "target": "ES5",
+    "experimentalDecorators": true
   },
   "exclude": [
     "test.ts",
