--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "linqts": "^1.8.2",
+    "ng2-mask": "^1.1.0",
     "node-snackbar": "^0.1.0",
     "rxjs": "^5.1.0",
     "underscore": "^1.8.3",
