--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng2-currency-mask": "^4.1.0",
     "ng2-mask": "^1.1.0",
     "ng2-select": "^1.2.0",
+    "ngx-pagination": "^3.0.1",
     "node-snackbar": "^0.1.0",
     "rxjs": "^5.1.0",
     "underscore": "^1.8.3",
